# محرر التطبيقات - Rust Backend

[package]
name = "lovbl-editor"
version = "0.1.0"
edition = "2021"
authors = ["chinmed-dev <chineenmed@gmail.com>"]
description = "App Editor Backend - Rust + Axum + SurrealDB"
repository = "https://github.com/chinmed-dev/LOVBL"

[dependencies]
# Web Framework & Async
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
hyper = "1.1"

# Database
surrealdb = { version = "1.1", features = ["kv-mem", "http"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Text Processing
regex = "1.10"
html-escape = "0.2"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
pin-project = "1.1"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Email (optional)
lettre = { version = "0.11", optional = true }

[features]
default = []
email = ["lettre"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
